reactjs/src/css/main.scss
.App{
    overflow: hidden;
}


.navbar {
    position: relative;
    display: flex;
    align-items: center;
    padding: 4px 15px;
    background-color: rgb(0, 48, 0);
    max-width: 100vw;

    a, a:hover, a:visited, a:link {
        color: white;
        font-size: 20px;
        text-decoration: none;
        margin: 0 10px;
    }

    .center-container {
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        display: flex;
        align-items: center;
        width: 30%;
    }

    form {
        display: flex;
        align-items: center;
        gap: 0;
        max-width: 600px;

        button {
            height: 40px;
            padding: 0 15px;
            border-radius: 4px;
            cursor: pointer;
        }

        input[type="text"] {
            height: 40px;
            flex-grow: 1;
            padding: 0 10px;
            font-size: 16px;
            border: 1px solid #ccc;
            border-radius: 0 4px 4px 0;
        }
    }

    .navbar-nav {
        display: flex;
        align-items: center;

        a{
            margin: 0px;
        }
    }

    .dropdown-menu {
        li a {
            color: black;
            font-size: 14px;
        }
    }

    .menu-toggle {
        display: none;
        background: none;
        border: none;
        color: white;
        font-size: 24px;
        cursor: pointer;
    }

    @media (max-width: 1400px) {
        &{
            position: fixed;
            z-index: 1000;
            width: 100%;
            top: 0;
            left: 0;
            margin: 0;
            padding: 0;
            border: none;
        }

        .menu-toggle {
            display: block;
        }

        .container-fluid{
            flex-direction: column;
            justify-content: flex-start;
            gap:20px;
        }

        .center-container, .navbar-nav {
            display: none;
        }


        &.closed {
            .navbar-nav, .center-container{
                display: none;
            }
        }


        .navbar-menu-toggle-div{
            padding: 4px 15px;
            margin: 0;
            box-sizing: border-box;
            width: 100%;
            background-color: rgb(0, 48, 0);
        }



        &.open{
            height: 100%;
            display: block;
            max-width: 70%;

            .center-container{
                display: flex;
                flex-direction: column;
                position: static;
                transform: none;
                width: 100%;
                margin-top: 10px;
            }

            .container-fluid{
                align-items: initial;
                width: 100%;
                margin-block:10px;
            }

            .navbar-nav.open {
                display: block;
                margin-top: 10px;
            }
        }
    }


    @media (max-width: 768px){
        &.open{
            width: 66%;
        }
    }

}

.categories-line {
    background-color: rgb(0, 83, 0);
    color: white;
    padding-block: 6px;
    display: flex;
    justify-content: center;

    .btn-category, .btn-category:active {
        padding-block: 0;
        padding-inline: 16px;
        color: inherit;
        text-decoration: none;
    }


    .navbar.closed + & {
        margin-top: 46px;  // Apply margin only when navbar is closed
    }

    .navbar.open + & {
        margin-top: 0;  // No extra space when navbar is open
    }
}

.product-list-container {
    padding-block: 40px;
    box-sizing: border-box;

    .products-list {
        display: flex;
        flex-wrap: wrap;
        gap: 40px;
        justify-content: flex-start;
        max-width: 100%;
        box-sizing: border-box;

        .card {
            width: 18rem;

            .ellipsify {
                width: 100%;
                overflow: hidden;
                -webkit-box-orient: vertical;
                line-clamp: 6;
                -webkit-line-clamp: 6;
                display: -webkit-box;
                white-space: pre-wrap;
            }

            img {
                padding: 4px;
                width: 100%;
                height: 250px;
                object-fit: contain;
            }

            .card-body {
                flex-grow: 1;
                display: flex;
                flex-direction: column;
            }

            .card-footer {
                margin-top: auto;
                padding: 10px;
                display: flex;
                justify-content: space-between;
                background-color: transparent;
                border: none;
            }

            .cartbtn {
                margin-left: auto;
            }
        }


        @media (max-width: 1400px){

            &{
                justify-content: center;

                .card{
                    width: 16rem;
                }
            }
        }
    }
}

.open-support-tickets-chat {
    float: right;
    position: fixed;
    bottom: 0;
    right: 0;
    font-size: 40px;
}

.support-tickets-chat {
    position: fixed;
    background-color: #f9f6f2;
    height: 50%;
    width: 350px;
    bottom: 0;
    right: 0;
    display: none;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 12px 12px 0 0;
    overflow: hidden;
    transition: all 0.3s ease;
    flex-direction: column;
    padding-block: 2px;

    .support-tickets-list {
        position: relative;
        height: max-content;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        align-items: center;
        gap: 6px;
        overflow-x: scroll;
        scrollbar-width: thin;
        width: 100%;
        border-bottom: 1px solid #ddd;
        padding: 4px;

        .close-chat {
            position: absolute;
            right: 0;
            font-size: 18px;
        }

        .support-ticket-item {
            display: flex;
            align-items: center;
            padding: 2px;
            background-color: #ccc;
            border-radius: 6px;
            cursor: pointer;
            transition: background-color 0.3s ease;

            .support-ticket-item-btn {
                color: white;
                background-color: #5a67d8;
                border: none;
                outline: none;
                height: 100%;
                border-radius: 4px;
                padding: 4px 10px;
            }
        }
    }

    .client-chat-modal-container {
        position: absolute;
        height: 90%;
        float: inline-start;
        width: 100%;
        bottom: 0;

        .chat-modal {
            display: flex;
            flex-direction: column;
            height: 100%;
            width: 100%;

            .messages-list-wrapper {
                scrollbar-width: none;
                overflow-y: scroll;
                flex: 1;
                display: flex;
                flex-direction: column-reverse;

                .messages-list {
                    height: 80%;

                    .rce-mlist {
                        display: flex;
                        flex-direction: column-reverse;

                        .rce-mbox {
                            max-width: 75%;
                        }
                    }
                }
            }

            .send-message-container {
                width: 85%;
                height: min-content;
                display: flex;
                justify-content: center;
                padding: 10px;
                box-sizing: border-box;
                padding-inline: 5%;

                .send-message-form {
                    display: flex;
                    align-items: center;
                    width: 100%;
                    gap: 10px;

                    .message-input-field {
                        padding-inline: 10px;
                        border-radius: 8px;
                    }

                    .message-input-button {
                        height: fit-content;
                    }
                }
            }
        }
    }


    @media (max-width: 1400px){
        &{  
            width: 40%;
            height: 60%;
        }
    }

    @media (max-width: 768px){
        &{  
            width: 60%;
            height: 70%;
        }
    }


    @media (max-width: 768px){
        &{  
            width: 85%;
            height: 70%;
        }
    }

}

